# pyrepo-cookiecutter

./: .pre-commit-config.yaml  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  LICENSE  environment.yml  pyproject.toml  setup.cfg  tox.ini
{{cookiecutter.project_name}}/docs/: conf.py  contributing.md  index.md
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: __init__.py
